initalisation de page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Memory Game</title>
 </head>
 <body>
-  <button href="Memory_Game.html">Memory Game</button>
-    
+    <h1>Memory Game</h1>
+    <div class="conteur">
+      <p>Chrono :<span id="time">0</span></p>
+      <p>Move : <span id="move">0</span> </p>
+    </div>
+    <div class="carts">
+        <!-- les cartes organiser par js -->
+    </div>
 </body>
 </html>
