--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
     <h1>Memory Game</h1>
     <div class="conteur">
-      <p>Chrono :<span id="time">0</span></p>
+      <p>Chrono :<span id="timer">0</span>s</p>
       <p>Move : <span id="move">0</span> </p>
     </div>
-    <div class="carts">
+    <div class="carts" id="cart_container">
         <!-- les cartes organiser par js -->
     </div>
+    <button id="restart">Restart</button>
 </body>
 </html>
