la modification de button pour mélanger

--- a/index.html
+++ b/index.html
@@ -13,8 +13,22 @@
       <p>Move : <span id="move">0</span> </p>
     </div>
     <div class="carts" id="cart_container">
-        <!-- les cartes organiser par js -->
+      <div class="cart">🦉</div>
+      <div class="cart">🐳</div>
+      <div class="cart">🐹</div>
+      <div class="cart">🐼</div>
+      <div class="cart">🐨</div>
+      <div class="cart">🐷</div>
+      <div class="cart">🐹</div>
+      <div class="cart">🐼</div>
+      <div class="cart">🦉</div>
+      <div class="cart">🐨</div>
+      <div class="cart">🐳</div>
+      <div class="cart">🐷</div>
+   
+   
     </div>
-    <button id="restart">Restart</button>
+    <button id="restart" onclick="emoji()">Restart</button>
+    <script src="java.js"></script>
 </body>
 </html>
