changement dans carts container hildren

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
       <p>Move : <span id="move">0</span> </p>
     </div>
     <div class="carts" id="cart_container">
-      <div class="cart">🦉</div>
-      <div class="cart">🐳</div>
-      <div class="cart">🐹</div>
-      <div class="cart">🐼</div>
-      <div class="cart">🐨</div>
-      <div class="cart">🐷</div>
-      <div class="cart">🐹</div>
-      <div class="cart">🐼</div>
-      <div class="cart">🦉</div>
-      <div class="cart">🐨</div>
-      <div class="cart">🐳</div>
-      <div class="cart">🐷</div>
+  <div class="cart" data-emoji="🦉"></div>
+        <div class="cart" data-emoji="🐳"></div>
+        <div class="cart" data-emoji="🐹"></div>
+        <div class="cart" data-emoji="🐼"></div>
+        <div class="cart" data-emoji="🐨"></div>
+        <div class="cart" data-emoji="🐷"></div>
+        <div class="cart" data-emoji="🐹"></div>
+        <div class="cart" data-emoji="🐼"></div>
+        <div class="cart" data-emoji="🦉"></div>
+        <div class="cart" data-emoji="🐨"></div>
+        <div class="cart" data-emoji="🐳"></div>
+        <div class="cart" data-emoji="🐷"></div>
    
    
     </div>
